Bug 15938 - CTDB's statd_callout fails on sm-notify
Summary: CTDB's statd_callout fails on sm-notify
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.21.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-27 02:14 UTC by Martin Schwenke
Modified: 2026-04-09 09:35 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-24-test, v4-23-test, v4-22-test (4.51 KB, patch)
2026-02-19 01:45 UTC, Martin Schwenke
anoopcs: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2025-10-27 02:14:45 UTC
Since commit 415f9f07456e3fd24063e7508d8b2553df020c21, statd_callout fails when pass an "sm-notify".  It produces a usage message.  This behaviour needs to be relaxed.
Comment 1 Samba QA Contact 2026-02-18 12:30:12 UTC
This bug was referenced in samba master:

7c5ce115f2c11e5a2dd326238f08bc5e7c10641c
Comment 2 Martin Schwenke 2026-02-19 01:45:40 UTC
Created attachment 18854 [details]
Patch for v4-24-test, v4-23-test, v4-22-test

Commits cherry-pick cleanly into v4-24-test.  Resulting patch also applies cleanly to v4-23-test and v4-22-test.

Affected unit tests pass on 4.22.

Note that this must be applied after the patch attached to BZ15939.
Comment 3 Anoop C S 2026-02-19 03:07:16 UTC
Re-assigning for inclusion in 4.22, 4.23 and 4.24.

As indicated earlier, please ensure that the cherry‑picks for bz#15939 are applied before this one on all release branches.
Comment 4 Samba QA Contact 2026-02-23 15:21:12 UTC
This bug was referenced in samba v4-24-test:

386b73b5796bf98f3d352041b1076498c9706299
Comment 5 Samba QA Contact 2026-02-23 20:06:55 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.0rc3):

386b73b5796bf98f3d352041b1076498c9706299
Comment 6 Martin Schwenke 2026-02-23 22:47:33 UTC
Hi Björn,

Did you mean to close this?  It isn't yet in 4.23 or 4.22.  :-(
Comment 7 Björn Jacke 2026-02-24 11:13:27 UTC
see https://bugzilla.samba.org/show_bug.cgi?id=15939#c8https://bugzilla.samba.org/show_bug.cgi?id=15939#c8
Comment 8 Samba QA Contact 2026-02-27 07:39:13 UTC
This bug was referenced in samba v4-23-test:

f4a7d868d101c44120211de30d52f9e2ecf5aa47
Comment 9 Samba QA Contact 2026-02-27 09:35:42 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.6):

f4a7d868d101c44120211de30d52f9e2ecf5aa47
Comment 10 Samba QA Contact 2026-04-08 17:41:12 UTC
This bug was referenced in samba v4-22-test:

84cb6eb6ff38eae744fc832977d0f900c45adb90
Comment 11 Samba QA Contact 2026-04-09 09:35:34 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.9):

84cb6eb6ff38eae744fc832977d0f900c45adb90