ctdb/tests/UNIT/eventscripts/statd-callout.150.sh
@@ -1,0 +1,6 @@
+#!/bin/sh
+
+CTDB_STATD_CALLOUT_SHARED_STORAGE="shared_dir"
+
+_dir=$(dirname "$0")
+. "${_dir}/statd-callout.050.sh"
